# median_polish

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  setup.py
median_polish/: __init__.py  main.py
median_polish/test/: main.py  test_main.py
